--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "author": {
+    "name": "Rukundo Kevin"
+  },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-table": "^7.7.20",
+    "axios": "^1.6.8",
+    "install": "^0.13.0",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.3",
+    "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
+    "tailwind-scrollbar": "^3.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
